# C-

./: README.md
HW1/: MyAnimalCollection.cpp
HW10/: CMakeLists.txt
HW10/business/headers/: Algorithm.h  AlgorithmFactory.h  AverageAlgorithm.h  RandomAlgorithm.h  SortAlgorithm.h
HW10/business/sources/: Algorithm.cpp  AverageAlgorithm.cpp  RandomAlgorithm.cpp  SortAlgorithm.cpp
HW10/data/: algorithm.txt  result.txt
HW10/domain/headers/: Order.h  Util.h
HW10/domain/sources/: Order.cpp  Util.cpp
HW11/: BadFromString.cpp  BadFromString.h  main.cpp
HW2/: Student.cpp  Student.h
HW3/: Makefile  bye.cpp  hello.cpp  here.cpp  main.cpp  mylib.h
HW3/back/: bye.cpp  hello.cpp  here.cpp
HW3/libs/: mylib.so.5.1.10
HW4/rational/: cbuild_all.sh  clean  zbuild_all.sh
HW4/rational/lib_poly/: CMakeLists.txt  lib_poly.h
HW4/rational/lib_poly/test/: polyTest.cpp
HW4/rational/lib_rational/: CMakeLists.txt  lib_rational.cpp
HW4/rational/rational_poly/: CMakeLists.txt
HW5/: StringBuilder.cpp  StringBuilder.h
HW7/: Array.cpp  Array.h  main.cpp
HW8/: CMakeLists.txt  Program.cpp
HW8/Headers/: Animal.h  Bear.h  Man.h  ManBearPig.h  Pig.h  Unit.h
HW8/SourceFiles/: Animal.cpp  Bear.cpp  Man.cpp  ManBearPig.cpp  Pig.cpp  Unit.cpp
HW9/: Array.cpp  Array.hpp  Program.cpp
